# daiyin

./: README.md  README_K4A.md  building.md
AES256/: AES256.h  AES256_tool.cpp  CMakeLists.txt  decryption.cpp  encryption.cpp
AES2856/: AES256.cpp  CMakeLists.txt  encryption.cpp
DesignPatterns/: CMakeLists.txt
DesignPatterns/example/: CMakeLists.txt
DesignPatterns/example/singleton/: CMakeLists.txt
DesignPatterns/src/: CMakeLists.txt
DesignPatterns/src/Iterator/: CMakeLists.txt  Company.cpp  Company.h  Company2.cpp  Company2.h  Iterator.h  Staff.cpp  Staff.h  test.cpp
DesignPatterns/src/factory/: CMakeLists.txt  Message.h  XiaojiuziMessage.cpp  XiaojiuziMessage.h  main.cpp
DesignPatterns/src/observer/: CMakeLists.txt  UserMessageObserver.cpp  UserMessageObserver.h  UserWallet.cpp  UserWallet.h  observer.h  test.cpp
DesignPatterns/src/proxy/: CMakeLists.txt  ServerInfo.cpp  ServerInfo.h  (+6 more)
bolt compatible akdk/: ob_k4a_loader.c  ob_k4a_loader.h  ob_k4a_loader.hpp  test.c  test_cpp.cpp
dll_or_lib/: CMakeLists.txt
dll_or_lib/include/: test1.h  test2.h  test3.h
dll_or_lib/t1/: CMakeLists.txt  test1.cpp
dll_or_lib/t2/: CMakeLists.txt  test2.cpp
dll_or_lib/t3/: CMakeLists.txt  test3.cpp
encryption/: .gitignore  CMakeLists.txt  OrbbecSDK.license  decrypt.cpp  encryption.cpp
encryption/decrypt_target/: OrbbecSDK.license.xml
encryption/encryption_target/: OrbbecSDK.license  OrbbecSDK.license.xml
multi_device_start_stop/: k4adevicedockcontrol.cpp
multi_device_start_stop/streaming/: main.c
tools/: time_stamp_secondmill_to_currentTime.py
(+7 files in other folders)
